# bootcamp-django

./: .gitignore  README.md  pyproject.toml  shell.nix
src/bootcamp_django/: main.py
